# openEHR2FHIRquestionnaire

./: .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README-HF.md  README.md  app.py  app_hf.py  fill_composition_from_response.py  pyproject.toml  requirements.txt  run_dev.py  webtemplate_to_fhir_questionnaire_json.py
.github/workflows/: deploy-to-huggingface.yml  github-pages.yml
.huggingface/: README.md
docs/: index.html
samples/: sample_webtemplate.json
