[project]
name = "openEHR2FHIRquestionnaire"
version = "0.1.0"
description = "Converts openEHR web templates to FHIR Questionnaire resources"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [
    {name = "Cistec AG"}
]
dependencies = [
    "gradio>=4.19.2",
    "python-dateutil>=2.8.2",
    "pycountry>=22.3.5"
]

[project.urls]
Homepage = "https://github.com/cistec-com/openEHR2FHIRquestionnaire"
"Bug Tracker" = "https://github.com/cistec-com/openEHR2FHIRquestionnaire/issues"

[tool.uv]
# UV-specific configuration can be added here if needed
